added bootstrap to the project

--- a/app/views/static_pages/about.html
+++ b/app/views/static_pages/about.html
@@ -1,10 +1,20 @@
-<p>
-  Comic Wiki is a project done as a part of assignment in RRC college through
-  out Business Information Technology (BIT) course. Project is using
-  <a href="http://comicvine.gamespot.com/api/" target="_blank">Comic Vine API</a
-  >. It fetches the data from API and saves it to the local database.
-</p>
-<p>
-  This is an open source project and you can find code for this project on
-  <a href="https://github.com/harshPPatel/comic-wiki" target="_blank">GitHub</a>
-</p>
+<div class="container">
+  <div class="jumbotron mt-5">
+    <h1 class="display-4">Comic Wiki</h1>
+    <p class="lead">
+      Comic Wiki is a project done as a part of assignment in RRC college
+      through out Business Information Technology (BIT) course. Project is using
+      <a href="http://comicvine.gamespot.com/api/" target="_blank"
+        >Comic Vine API</a
+      >. It fetches the data from API and saves it to the local database.
+    </p>
+    <hr class="my-4" />
+    <a
+      class="btn btn-primary btn-lg"
+      href="https://github.com/harshPPatel/comic-wiki"
+      target="_blank"
+      role="button"
+      >GitHub</a
+    >
+  </div>
+</div>
