--- a/app/views/volumes/index.html.erb
+++ b/app/views/volumes/index.html.erb
@@ -1,22 +1,23 @@
-<h1>List of Volumes</h1>
-
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Start Year</th>
-    <%# <th>Description</th> %>
-    <th>Total Issues</th>
-    <th>Show Links</th>
-  </tr>
-  <% @volumes.each do |volume| %>
+<h1 class="display-4 mb-5 mt-5">List of Volumes</h1>
+<table class="table table-hover mb-5">
+  <thead class="thead-dark">
     <tr>
-      <td><%= volume.id %></td>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Start Year</th>
+      <th scope="col">Total Issues</th>
+      <th scope="col">Links</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @volumes.each do |volume| %>
+    <tr>
+      <th scope="row"><%= volume.id %></th>
       <td><%= volume.name %></td>
       <td><%= volume.start_year %></td>
-      <%# <td><%= volume.description.html_safe</td> %>
       <td><%= volume.issues.length %></td>
       <td><%= link_to 'Show', volume_path(volume) %></td>
     </tr>
-  <% end %>
+    <% end %>
+  </tbody>
 </table>
