--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,18 +1,21 @@
-<h1>List of Characters</h1>
-
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Total Issues</th>
-    <th>Show Links</th>
-  </tr>
-  <% @characters.each do |character| %>
+<h1 class="display-4 mb-5 mt-5">List of Characters</h1>
+<table class="table table-hover mb-5">
+  <thead class="thead-dark">
     <tr>
-      <td><%= character.id %></td>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Total Issues appeared on</th>
+      <th scope="col">Links</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @characters.each do |character| %>
+    <tr>
+      <th scope="row"><%= character.id %></th>
       <td><%= character.name %></td>
       <td><%= character.issues.length %></td>
       <td><%= link_to 'Show', character_path(character) %></td>
     </tr>
-  <% end %>
+    <% end %>
+  </tbody>
 </table>
