--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,39 +1,34 @@
-<p>
-  <strong>Name:</strong>
-  <%= @character.name %>
-</p>
- 
-<p>
-  <strong>On Comic Vine:</strong>
-  <a href="<%= @character.site_detail_url %>" target="_blank"><%= @character.name %></a>
-</p>
+<div class="jumbotron">
+  <div class="row">
+    <div class="col-4 image-container">
+      <img src="<%= @character.image_url %>" alt="<%= @character.name %>">
+    </div>
+    <div class="col-8">
+      <h1><%= @character.name %></h1>
+      <p class="lead"><%= @character.description.html_safe %></p>
+      <a href="<%= @character.site_detail_url %>" target="_blank" class="btn btn-info">Checkout on Comic Vine</a>
+    </div>
+  </div>
+</div>
 
-<p>
-  <img src="<%= @character.image_url %>">
-</p>
- 
-<p>
-  <strong>Description:</strong>
-  <%= @character.description.html_safe %>
-</p>
- 
-<p>
-  <strong>Issues appeared on:</strong>
-</p>
-
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Show Links</th>
-  </tr>
-  <% @character.issues.each do |issue| %>
+<h3 class="mb-3 mt-5">Character Issues appeared on:</h3>
+<table class="table table-hover mb-5">
+  <thead class="thead-dark">
     <tr>
-      <td><%= issue.id %></td>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Link</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @character.issues.each do |issue| %>
+    <tr>
+      <th scope="row"><%= issue.id %></th>
       <td><%= issue.name %></td>
       <td><%= link_to 'Show', issue_path(issue) %></td>
     </tr>
-  <% end %>
+    <% end %>
+  </tbody>
 </table>
 
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', :back, class: 'mt-3 mb-5 btn btn-dark' %>
