--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,18 +1,21 @@
-<h1>List of Issues</h1>
-
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Total Characters</th>
-    <th>Show Links</th>
-  </tr>
-  <% @issues.each do |issue| %>
+<h1 class="display-4 mb-5 mt-5">List of Issues</h1>
+<table class="table table-hover mb-5">
+  <thead class="thead-dark">
     <tr>
-      <td><%= issue.id %></td>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Total Characters</th>
+      <th scope="col">Links</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @issues.each do |issue| %>
+    <tr>
+      <th scope="row"><%= issue.id %></th>
       <td><%= issue.name %></td>
       <td><%= issue.characters.length %></td>
       <td><%= link_to 'Show', issue_path(issue) %></td>
     </tr>
-  <% end %>
+    <% end %>
+  </tbody>
 </table>
