--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,39 +1,36 @@
-<p>
-  <strong>Name:</strong>
-  <%= @issue.name %>
-</p>
- 
-<p>
-  <strong>On Comic Vine:</strong>
-  <a href="<%= @issue.site_detail_url %>" target="_blank"><%= @issue.name %></a>
-</p>
+<div class="jumbotron">
+  <div class="row">
+    <div class="col-4 image-container">
+      <img src="<%= @issue.image_url %>" alt="<%= @issue.name %>">
+    </div>
+    <div class="col-8">
+      <h1><%= @issue.name %></h1>
+      <p class="lead"><%= @issue.description.html_safe %></p>
+      <a href="<%= @issue.site_detail_url %>" target="_blank" class="btn btn-info">Checkout on Comic Vine</a>
+    </div>
+  </div>
+</div>
 
-<p>
-  <img src="<%= @issue.image_url %>">
-</p>
- 
-<p>
-  <strong>Description:</strong>
-  <%= @issue.description.html_safe %>
-</p>
- 
-<p>
-  <strong>Characters:</strong>
-</p>
-
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Show Links</th>
-  </tr>
-  <% @issue.characters.each do |character| %>
+<h3 class="mb-3 mt-5">Issue Characters:</h3>
+<table class="table table-hover mb-5">
+  <thead class="thead-dark">
     <tr>
-      <td><%= character.id %></td>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Total Issues</th>
+      <th scope="col">Link</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @issue.characters.each do |character| %>
+    <tr>
+      <th scope="row"><%= character.id %></th>
       <td><%= character.name %></td>
+      <td><%= character.issues.length %></td>
       <td><%= link_to 'Show', character_path(character) %></td>
     </tr>
-  <% end %>
+    <% end %>
+  </tbody>
 </table>
 
-<%= link_to 'Back' %>
+<%= link_to 'Back', :back, class: 'mt-3 mb-5 btn btn-dark' %>
