--- a/app/views/volumes/show.html.erb
+++ b/app/views/volumes/show.html.erb
@@ -1,44 +1,37 @@
-<p>
-  <strong>Name:</strong>
-  <%= @volume.name %>
-</p>
- 
-<p>
-  <strong>Start Year:</strong>
-  <%= @volume.start_year %>
-</p>
- 
-<p>
-  <strong>On Comic Vine:</strong>
-  <a href="<%= @volume.site_detail_url %>" target="_blank"><%= @volume.name %></a>
-</p>
+<div class="jumbotron">
+  <div class="row">
+    <div class="col-4 image-container">
+      <img src="<%= @volume.image_url %>" alt="<%= @volume.name %>">
+    </div>
+    <div class="col-8">
+      <h1><%= @volume.name %></h1>
+      <p class="lead"><%= @volume.description.html_safe %></p>
+      <p><b>Start Year:</b> <%= @volume.start_year %></p>
+      <a href="<%= @volume.site_detail_url %>" target="_blank" class="btn btn-info">Checkout on Comic Vine</a>
+    </div>
+  </div>
+</div>
 
-<p>
-  <img src="<%= @volume.image_url %>">
-</p>
- 
-<p>
-  <strong>Description:</strong>
-  <%= @volume.description.html_safe %>
-</p>
- 
-<p>
-  <strong>Issues:</strong>
-</p>
-
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Show Links</th>
-  </tr>
-  <% @volume.issues.each do |issue| %>
+<h3 class="mb-3 mt-5">Volume issues:</h3>
+<table class="table table-hover mb-5">
+  <thead class="thead-dark">
     <tr>
-      <td><%= issue.id %></td>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Total Characters</th>
+      <th scope="col">Link</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @volume.issues.each do |issue| %>
+    <tr>
+      <th scope="row"><%= issue.id %></th>
       <td><%= issue.name %></td>
+      <td><%= issue.characters.length %></td>
       <td><%= link_to 'Show', issue_path(issue) %></td>
     </tr>
-  <% end %>
+    <% end %>
+  </tbody>
 </table>
 
-<%= link_to 'Back', volumes_path %>
+<%= link_to 'Back', :back, class: 'mt-3 mb-5 btn btn-dark' %>
